--- a/week5.html
+++ b/week5.html
@@ -55,7 +55,7 @@
             <dd>This block is everywhere. You can get by just punching it or using a shovel.</dd>
 
             <dt>Cobblestone</dt>
-            <img src="https://github.com/Amador-12354/CSC104-Beginning-Website-Interfaces/blob/main/cobblestone.jpg" alt="A cobblestone block" width="150px">
+            <img src="cobblestone.jpg" alt="A cobblestone block" width="150px">
             <dd>To get this block you need a pickaxe and just have to mine stone found in mountains and caves.</dd>
 
             <dt>Logs</dt>
@@ -82,3 +82,4 @@
 </body>
 
 </html>
+
