--- a/week5.html
+++ b/week5.html
@@ -31,27 +31,27 @@
           <dl>
             <!-- dt is the term -->
             <dt>Creeper</dt>
-            <img src="Week5 Images/creeper.jpg" alt="A bunch of creepers on a sandy beach" width="250px">
+            <img src="creeper.jpg" alt="A bunch of creepers on a sandy beach" width="250px">
             <!-- dd is the description -->
              <dd>This mob is commonly seen and likes to seek up on the player and explode</dd>
 
              <dt>Zombie</dt>
-             <img src="Week5 Images/zombie.jpg" alt="A group of zombies in a grassy biome" width="250px">
+             <img src="zombie.jpg" alt="A group of zombies in a grassy biome" width="250px">
              <dd>This mob is seen during the night which deals melee damage, by coming up to you and hitting you. They can attack in groups</dd>
 
              <dt>Skeleton</dt>
-             <img src="Week5 Images/Skeleton.jpg" alt="A skeleton standing in front of player" width="250px">
+             <img src="Skeleton.jpg" alt="A skeleton standing in front of player" width="250px">
              <dd>Can be seen during the night like the zombie. They shoot arrows so they are diffcult to attack and slay</dd>
 
              <dt>Witch</dt>
-             <img src="Week5 Images/Witch.jpg" alt="A witch standing in front of a player with potion particles around it" width="250px">
+             <img src="Witch.jpg" alt="A witch standing in front of a player with potion particles around it" width="250px">
              <dd>Can be seen sometimes during the night but can be found in the swamp biome. The withc uses potions in combat can be splash potions (hurts players) and drinkable potions (to heal themselves)</dd>
           </dl>
 
           <h3>Some Popular Blocks:</h3>
           <dl>
             <dt>Dirt</dt>
-            <img src="Week5 Images/dirt.jpg" alt="The different types of dirt blocks around" width="250px">
+            <img src="dirt.jpg" alt="The different types of dirt blocks around" width="250px">
             <dd>This block is everywhere. You can get by just punching it or using a shovel.</dd>
 
             <dt>Cobblestone</dt>
@@ -59,7 +59,7 @@
             <dd>To get this block you need a pickaxe and just have to mine stone found in mountains and caves.</dd>
 
             <dt>Logs</dt>
-            <img src="Week5 Images/logs.jpg" alt="A oak tree with a stripped log." width="250px">
+            <img src="logs.jpg" alt="A oak tree with a stripped log." width="250px">
             <dd>These are just trees so you need to a axe or just your fist to punch the tree to get the logs. You can use the logs to make planks. (MOST IMPORTANT BLOCK - in my opinion)</dd>
           </dl>
 
@@ -82,4 +82,5 @@
 </body>
 
 </html>
+
 
